--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,2 @@
-fastapi
-uvicorn
-tensorflow
-keras
-numpy
-pandas
-scikit-learn
-matplotlib
-opencv-python
-psycopg2-binary
-fastapi-users[sqlalchemy2]
+pydantic~=2.7.3
+sqlalchemy~=2.0.30
